# Crackitos_core

./: CMakeLists.txt  README.md
core/: CMakeLists.txt  vcpkg.json
core/common/include/: commons.h  distance.h  random.h  timer.h
core/common/src/: timer.cc
core/core/: CMakeLists.txt
core/core/common/include/: angle.h  commons.h  timer.h
core/core/math/include/: matrix3.h  matrix4.h  quaternion.h  shape.h  vec4.h
core/core/math/src/: four_vec3.cc  four_vec4.cc
core/core/test/: test_angles.cc  test_four_vec2.cc  test_four_vec3.cc
core/math/include/: four_vec2.h  four_vec3.h  four_vec4.h  matrix2.h  shape.h  vec2.h  vec3.h
core/math/src/: four_vec2.cc
core/test/: test_distance.cc  test_four_vec4.cc  test_matrix2.cc  test_matrix3.cc  test_matrix4.cc  test_quaternion.cc  test_vec2.cc  test_vec3.cc  test_vec4.cc
